--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "ts-node app.ts"
+        "start": "ts-node src/app.ts"
     },
     "keywords": [],
     "author": "",
